--- a/client/src/Pages/Home/Components/Hero/Hero.module.css
+++ b/client/src/Pages/Home/Components/Hero/Hero.module.css
@@ -35,6 +35,7 @@
   justify-content: center;
   border-radius: 0.5rem;
   gap: 0.5rem;
+  margin-bottom: 2rem;
 }
 
 .profile h6 {
